<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">App42NokiaX</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
 <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="email">Email (required if registering)</string>
       <string name="signin_button">Sign in</string>
    <string name="register_button">Register now</string>
</resources>
